@@ -4,6 +4,7 @@ package com.food.phat.dto.modifier;
 import lombok.Data;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Data
@@ -13,7 +14,7 @@ public class ModifierGroupResponse {
     List<ModifierResponse> modifiers = new ArrayList<>();
 
     public void addModifier(ModifierResponse modifier) {
-        this.addModifier(List.of(modifier));
+        this.addModifier(Arrays.asList(modifier));
     }
     public void addModifier(List<ModifierResponse> modifiers) {
         this.modifiers.addAll(modifiers);
